# RAG-doc-gen

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
data/templates/: amaan.json  new_research.json  resume_profile_summary.json  smart_classroom_ai_report.json
sample_templates/: research_summary_template.json
src/: config.py  models.py
src/generation/: generation_pipeline.py  llm_client.py  prompt_builder.py
src/ingestion/: document_loader.py  ingestion_pipeline.py  text_splitter.py
src/output/: citation_formatter.py
src/retrieval/: retriever.py
src/templates/: template_manager.py
src/vectorstore/: chroma_store.py  embeddings.py
